--- a/src/components/Home/HomePage.module.css
+++ b/src/components/Home/HomePage.module.css
@@ -1,8 +1,4 @@
-.home {
-  /* background-color: antiquewhite; */
-}
-
-.homeWrapper {
+/* .homeWrapper {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -60,9 +56,6 @@
     margin-top: 4em;
   }
 
-  /* .home{
-    padding: 5em;
-  } */
 }
 
 @media screen and (min-width: 1400px) {
@@ -70,4 +63,100 @@
         flex-direction: row;
         margin-top: 6em;
       }
+  } */
+
+  /* HOME WITHOUT PHOTO CSS */
+  .home h1 {
+    padding: 10px;
+    text-align: center;
   }
+  .welcomeBox {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    margin: 0 auto;
+    padding: 10px;
+    max-width: 900px;
+  }
+  
+  .fadeIn {
+    animation: fadeIn 2s;
+    -webkit-animation: fadeIn 2s;
+    -moz-animation: fadeIn 2s;
+    -o-animation: fadeIn 2s;
+    -ms-animation: fadeIn 2s;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .aboutBox,
+  .skillsBox {
+    margin: 1em auto;
+    padding: 10px;
+    max-width: 1200px;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr;
+  }
+  
+  .skillsBox {
+    background-color: #9cafb7;
+  }
+  .skillsContent {
+    grid-row: 1/2;
+  }
+  
+  .skillsContent button {
+    width: 50%;
+  }
+  
+  .aboutBox img {
+    justify-self: center;
+    align-self: center;
+    width: 70%;
+  }
+  
+  .homeWrapper,
+  .skilsWrapper {
+    background-color: var(--accentTwo);
+    padding: 5px;
+  }
+  .welcomeBox .btnBox {
+    max-width: 200px;
+  }
+  
+  .btnBox button {
+    margin: 0;
+  }
+  
+  .btnBox a{
+    color:black;
+  }
+  @media screen and (min-width: 768px) {
+    .welcomeBox {
+      gap: 1em;
+      margin-top: 5em;
+      margin-bottom: 6em;
+    }
+  
+  }
+  
+  .text {
+    margin-bottom: 1em;
+  }
+  
+
+  @media screen and (min-width: 1000px) {
+    .welcomeBox {
+      margin-top: 11em;
+      margin-bottom: 11em;
+    }
+  
+  }
+  
