--- a/src/components/Projects/ProjectsPage.module.css
+++ b/src/components/Projects/ProjectsPage.module.css
@@ -15,8 +15,17 @@ padding: 10px;
     text-align: center;
     vertical-align: middle;
     line-height: 250px;
+    background-color: antiquewhite;
+    border-radius: 10px;
+   
 }
 
-.subjectBox a:hover{
-    color:red;
+/* .textBoxOverlay{
+    position: absolute;
+    bottom: 100;
+    left: 50;
+} */
+
+.subjectBox:hover{
+    background-color:red;
 }
