--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,9 @@ nav a{
 
 .banner{
   text-align: center;
-  padding: 10px;
+  padding: 15px;
   max-width: 250px;
-  margin: 1em auto;
+  margin: 2em auto;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
 }
