--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primaryColor: #AA8B56;
+  --primaryColor: #395144;
   --secondaryColor: #4E6C50;
   --accentOne: #AA8B56;
   --accentTwo: #F0EBCE;
