--- a/src/components/Projects/ProjectDetailPage.module.css
+++ b/src/components/Projects/ProjectDetailPage.module.css
@@ -1,4 +1,4 @@
-.btnBox {
+/* .btnBox {
     max-width: 250px;
     margin: 1em auto;
   }
@@ -8,8 +8,8 @@
   }
   
   .btnBox a{
-    color:black;
-  }
+    color:white;
+  } */
 
 .detailContainer{
     padding: 10px;
