--- a/src/components/Projects/ProjectList.module.css
+++ b/src/components/Projects/ProjectList.module.css
@@ -9,7 +9,7 @@ padding: 10px;
 list-style: none;
 }
 
-.btnBox {
+/* .btnBox {
     max-width: 250px;
     margin: 1em auto;
   }
@@ -19,5 +19,5 @@ list-style: none;
   }
   
   .btnBox a{
-    color:black;
-  }
+    color:white;
+  } */
