--- a/src/components/Layout/NavMobile.module.css
+++ b/src/components/Layout/NavMobile.module.css
@@ -16,7 +16,7 @@
     right: 10px;
     width: 90vw;
     padding: 30px;
-    background-color: #367da4;
+    background-color: var(--primaryColor, #395144);
     color:white;
     border-radius: 2px 2px 10px 10px;
   }
