--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -5,9 +5,9 @@
     text-align: center;
     vertical-align: middle;
     line-height: 250px;
-    background-color: antiquewhite;
+    background-color: var(--accentTwo);
     border-radius: 10px;
-   
+    transition: 0.25s;
 }
 
 /* .textBoxOverlay{
@@ -17,5 +17,5 @@
 } */
 
 .projectCard:hover{
-    background-color:red;
+    background-color:var(--accentOne);
 }
