--- a/src/components/Home/HomePage.module.css
+++ b/src/components/Home/HomePage.module.css
@@ -1,30 +1,14 @@
-/* .homeWrapper {
+.home h1 {
   padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  gap: 1em;
-  max-width: 1400px;
-  
+  text-align: center;
 }
 .welcomeBox {
   display: flex;
   flex-direction: column;
-
   gap: 1em;
   margin: 0 auto;
   padding: 10px;
   max-width: 900px;
-}
-
-.welcomeBox .btnBox {
-  max-width: 200px;
-}
-
-.homeWrapper img {
-  width: 300px;
-  justify-self: center;
 }
 
 .fadeIn {
@@ -43,110 +27,50 @@
     opacity: 1;
   }
 }
+.aboutBox,
+.skillsBox {
+  margin: 1em auto;
+  padding: 10px;
+  max-width: 1200px;
+  display: grid;
+  gap: 1em;
+  grid-template-columns: 1fr;
+}
+
+.skillsBox {
+  background-color: #9cafb7;
+}
+.skillsContent {
+  grid-row: 1/2;
+}
+
+.aboutBox img {
+  justify-self: center;
+  align-self: center;
+  width: 70%;
+}
+
+.homeWrapper,
+.skilsWrapper {
+  background-color: var(--secondaryColor, #f0ebce);
+  padding: 5px;
+}
 
 @media screen and (min-width: 768px) {
-  .homeWrapper {
-    gap: 3em;
+  .welcomeBox {
+    gap: 1em;
+    margin-top: 5em;
+    margin-bottom: 6em;
   }
+}
+
+.text {
+  margin-bottom: 1em;
 }
 
 @media screen and (min-width: 1000px) {
-  .homeWrapper {
-    flex-direction: row;
-    margin-top: 4em;
-  }
-
-}
-
-@media screen and (min-width: 1400px) {
-    .homeWrapper {
-        flex-direction: row;
-        margin-top: 6em;
-      }
-  } */
-
-  /* HOME WITHOUT PHOTO CSS */
-  .home h1 {
-    padding: 10px;
-    text-align: center;
-  }
   .welcomeBox {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    margin: 0 auto;
-    padding: 10px;
-    max-width: 900px;
+    margin-top: 11em;
+    margin-bottom: 11em;
   }
-  
-  .fadeIn {
-    animation: fadeIn 2s;
-    -webkit-animation: fadeIn 2s;
-    -moz-animation: fadeIn 2s;
-    -o-animation: fadeIn 2s;
-    -ms-animation: fadeIn 2s;
-  }
-  
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  .aboutBox,
-  .skillsBox {
-    margin: 1em auto;
-    padding: 10px;
-    max-width: 1200px;
-    display: grid;
-    gap: 1em;
-    grid-template-columns: 1fr;
-  }
-  
-  .skillsBox {
-    background-color: #9cafb7;
-  }
-  .skillsContent {
-    grid-row: 1/2;
-  }
-  
-  /* .skillsContent button {
-    width: 50%;
-  }
-   */
-  .aboutBox img {
-    justify-self: center;
-    align-self: center;
-    width: 70%;
-  }
-  
-  .homeWrapper,
-  .skilsWrapper {
-    background-color: var(--secondaryColor, #F0EBCE);
-    padding: 5px;
-  }
-
-  @media screen and (min-width: 768px) {
-    .welcomeBox {
-      gap: 1em;
-      margin-top: 5em;
-      margin-bottom: 6em;
-    }
-  
-  }
-  
-  .text {
-    margin-bottom: 1em;
-  }
-  
-
-  @media screen and (min-width: 1000px) {
-    .welcomeBox {
-      margin-top: 11em;
-      margin-bottom: 11em;
-    }
-  
-  }
-  
+}
