--- a/src/components/Projects/ProjectDetailPage.module.css
+++ b/src/components/Projects/ProjectDetailPage.module.css
@@ -1,45 +1,50 @@
-/* .btnBox {
-    max-width: 250px;
-    margin: 1em auto;
+.detailContainer {
+  padding: 10px;
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+.detailContainer p {
+  margin: 1em 0;
+}
+
+.detailContainer .content .video {
+  text-align: center;
+}
+
+.detailContainer .images {
+  margin: 2em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detailContainer .images img {
+  width: 90%;
+  margin: 1em 0;
+}
+
+.video iframe {
+  border: none;
+  width: 300px;
+  height: 175px;
+}
+
+@media screen and (min-width: 500px) {
+  .video iframe {
+    border: none;
+    width: 500px;
+    height: 355px;
   }
-  
-  .btnBox button {
-    margin: 0;
-  }
-  
-  .btnBox a{
-    color:white;
-  } */
-
-.detailContainer{
-    padding: 10px;
-    max-width: 800px;
-    margin: 1em auto;
-}
-
-.detailContainer p{
-    margin: 1em 0;
-}
-
-.detailContainer .content .video{
-    text-align: center;
-}
-
-.detailContainer .images{
-    margin: 2em 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.detailContainer .images img{
-    width: 90%;
-    margin: 1em 0;
 }
 
 @media screen and (min-width: 768px) {
-    .detailContainer .images img{
-        width: 50%;
-    }
+  .detailContainer .images img {
+    width: 50%;
   }
-  
+
+  .video iframe {
+    width: 625px;
+    height: 380px;
+  }
+}
