--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,23 +1,22 @@
 .button {
-    border: 1px solid black;
-    background-color: var(--accentOne, #5a7e5d);
-    border-radius: 10px;
-    padding: 1em;
-    margin: 15px auto;
-    width: 100%;
-    max-width: 100%;
-    font-size: 18px;
-    transition: 0.25s;
-    display: block;
-    color:white;
-  }
-  
-  .button:hover {
-    background-color: var(--primaryColor, #5a7e5d);
-    cursor: pointer;
-  }
-  
-  .button:active {
-    background-color: var(--accentTwo, #AA8B56);
-  }
-  
+  border: 1px solid black;
+  background-color: var(--accentOne, #5a7e5d);
+  border-radius: 10px;
+  padding: 1em;
+  margin: 15px auto;
+  width: 100%;
+  max-width: 100%;
+  font-size: 18px;
+  transition: 0.25s;
+  display: block;
+  color: white;
+}
+
+.button:hover {
+  background-color: var(--primaryColor, #5a7e5d);
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: var(--accentTwo, #aa8b56);
+}
