--- a/src/components/Layout/NavMobile.module.css
+++ b/src/components/Layout/NavMobile.module.css
@@ -16,6 +16,7 @@
   right: 10px;
   width: 90vw;
   padding: 30px;
+  z-index: 100;
   background-color: var(--primaryColor, #395144);
   color: white;
   border-radius: 2px 2px 10px 10px;
