Finished Site for now

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primaryColor: #5a7e5d;
+  --primaryColor: #395144;
   --secondaryColor: #F0EBCE;
   --accentOne: #5a7e5d;
   --accentTwo: #AA8B56;
